Upgrated to sbt 0.13.0