@@ -1,8 +1,8 @@
-import com.typesafe.sbtscalariform.ScalariformPlugin._
 import sbt._
 import sbt.Keys._
 import sbt.ScriptedPlugin._
 import sbtrelease.ReleasePlugin._
+import com.typesafe.sbt.SbtScalariform._
 
 object Build extends Build {
 
@@ -19,7 +19,9 @@ object Build extends Build {
     "nbsbt-core",
     file("nbsbt-core"),
     settings = commonSettings ++ Seq(
-      libraryDependencies ++= Seq("org.scalaz" %% "scalaz-core" % "6.0.4")
+      libraryDependencies ++= Seq(
+        "org.scalaz"  %% "scalaz-core"  % "7.0.2",
+        "org.scalaz" %% "scalaz-effect" % "7.0.2")
     )
   )
 
@@ -30,24 +32,39 @@ object Build extends Build {
     settings = commonSettings
   )
 
-  def commonSettings = Defaults.defaultSettings ++
-    scalariformSettings ++
-    scriptedSettings ++
-    releaseSettings ++
-    Seq(
-      //scalaVersion := "2.10.0",
-      organization := "org.netbeans.nbsbt",
-      // version is defined in version.sbt in order to support sbt-release
-      scalacOptions ++= Seq("-unchecked", "-deprecation"),
-      publishTo <<= isSnapshot { isSnapshot =>
-        val id = if (isSnapshot) "snapshots" else "releases"
-        val uri = "https://typesafe.artifactoryonline.com/typesafe/ivy-" + id
-        Some(Resolver.url("typesafe-" + id, url(uri))(Resolver.ivyStylePatterns))
-      },
-      sbtPlugin := true,
-      publishMavenStyle := false,
-      publishArtifact in (Compile, packageDoc) := false,
-      publishArtifact in (Compile, packageSrc) := false,
-      scriptedLaunchOpts += "-Xmx1024m"
-    )
+  def commonSettings =
+    Defaults.defaultSettings ++
+  scalariformSettings ++
+  scriptedSettings ++
+  releaseSettings ++
+  Seq(
+    organization := "org.netbeans.nbsbt",
+    // version is defined in version.sbt in order to support sbt-release
+    scalacOptions ++= Seq("-unchecked", "-deprecation"),
+    publishTo <<= isSnapshot { isSnapshot =>
+      val id = if (isSnapshot) "snapshots" else "releases"
+      val uri = "https://typesafe.artifactoryonline.com/typesafe/ivy-" + id
+      Some(Resolver.url("typesafe-" + id, url(uri))(Resolver.ivyStylePatterns))
+    },
+    sbtPlugin := true,
+    publishMavenStyle := false,
+    sbtVersion in GlobalScope <<= (sbtVersion in GlobalScope) { sbtVersion =>
+      System.getProperty("sbt.build.version", sbtVersion)
+    },
+    // sbtBinaryVersion in GlobalScope <<= (sbtVersion in GlobalScope) { sbtVersion =>
+    //   // This isn't needed once we start using SBT 0.13 to build
+    //   if (CrossVersion.isStable(sbtVersion)) CrossVersion.binarySbtVersion(sbtVersion) else sbtVersion
+    // },
+    scalaVersion <<= (sbtVersion in GlobalScope) {
+      case sbt013 if sbt013.startsWith("0.13.") => "2.10.3"
+      case sbt012 if sbt012.startsWith("0.12.") => "2.9.3"
+      case _ => "2.9.3"
+    },
+    sbtDependency in GlobalScope <<= (sbtDependency in GlobalScope, sbtVersion in GlobalScope) { (dep, sbtVersion) =>
+      dep.copy(revision = sbtVersion)
+    },
+    publishArtifact in (Compile, packageDoc) := false,
+    publishArtifact in (Compile, packageSrc) := false,
+    scriptedLaunchOpts ++= List("-Xmx1024m", "-XX:MaxPermSize=256M")
+  )
 }
